# eTradie

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  ALIGNMENT.md  AUDIT.md  BUDGET.md  CHECKLIST.md  CLOUDFLARE.md  CONTINUE.md  DECISION.md  Dockerfile  FIX.md  FIX_TRACKER.md  GATEWAY.md  IMPLEMENTATION_PROGRESS.md  INSTRUCTIONS.md  ISSUES-TIER9-COMPLETENESS.md  ISSUES.md  Impl-order.md  LICENSE.txt  LLM.md  LTF.md  MT5_Multi_Broker_Provisioning_Architecture.md  Makefile  Makefile.platform  Makefile.platform.include  NOTE.md  OPTIMIZATION.md  ORDER.MD  ORDER.md  OUTPUT.md  PERFMANCE_REVIEW.md  PLAN.md  PRACTICE.md  PREVIOUS.md  PROBLEM.md  PROGRESS.md  PROGRESS_PERFORMANCE_REVIEW.md  (+50 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  cloudflare-refresh.yml  security-scan.yml
cotradee/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  vite-env.d.ts  vite.config.ts
cotradee/public/: uad-polyfill.js
cotradee/scripts/: check-consent-consumers.mjs  generate-vercel-headers.mjs
cotradee/src/: App.tsx  main.tsx
deployments/argocd/: README.md  appproject.yaml  linkerd-appproject.yaml  monitoring-appproject.yaml  root-app.yaml
deployments/cloudflare/: README.md
deployments/docker/: docker-compose.yml  exoper_envoy_integration_filter.wasm
deployments/linkerd/: Chart.yaml  control-plane-values.yaml  values.yaml
docker/engine/: .dockerignore  Dockerfile
docker/mt-node/: Dockerfile  README.md  entrypoint.sh  watchdog.py
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: CHECKLIST.md  DEPLOYMENT.md  EXOPER.md  billing-quota.md  billing.md  cookie-auth.md  dashboard-integration.md  edge-layer-cookie-audit.md
docs/architecture/: broker-connectivity.md  edge-cloudflare-envoy.md
docs/audit/: COT_TFF_ACTIVATION.md  EXECUTION_MANAGEMENT_AUDIT.md  FED_RATE_DATA_FIX.md  INTERMARKET_FRED_FIX.md  JOURNAL_AUTOFILL_HARDENING.md  JOURNAL_AUTOFILL_ROUND2.md  JOURNAL_LIVE_AND_WINDOW.md  LLM_DUPLICATE_CALL_FIX.md  MACRO_DURABILITY_FIX.md  MACRO_END_TO_END_AUDIT.md  MACRO_RSS_AND_NEWS_AUDIT.md  SECTION_3_STEP_C_ADDENDUM.md  STOP_LOSS_TAKE_PROFIT_FIX.md  TRADING_JOURNAL_AUTO_SYNC.md
docs/db/: checklist.md
docs/deployment/: README.md  billing-runbook.md  contabo-k3s.md  oci-oke.md
docs/docx/: TradingSystem_TechSpec_v1.0.docx
docs/execution(mgt)/: checklist.md
docs/mt/: checklist.md
docs/runbooks/: BROKER-MOCK-SYMBOL-CLEANUP.md  CHECKLIST.md  CHROMADB-RAG-CHECKPOINT.md  HOSTED-MT-PROVISIONING-SESSION.md  PHASE10.6-KYVERNO-PSS-RESTRICTED-PLAN.md  PHASE10.6-LINKERD-OPAQUE-PORTS.md  PHASE10.6-MESH-DISABLED-CHECKPOINT.md  PROGRESS.md  README.md  STAGING-PRODUCTION-CHURN-CHECKPOINT.md  WS-NOTIFICATIONS-INVESTIGATION.md  abuse-prevention.md  failure-recovery.md  load-testing.md  mt-node-cpu-pinning.md  mt-node-secret-rotation.md  (+5 more)
helm/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
infrastructure/: README.md
knowledge/: master_rulebook.md
make_example/: Makefile
output/: all.md  diagnostic_results.json  smc.md  snapshorts.md  snd.md
requirements/: base.txt  dev.txt  requirements.txt  security.txt  test.txt
runbook/: README.md
scripts/: add_user_id_rag.sql  add_user_id_rag_citations.sql  check-image-digests.sh  diagnostic_harness.py  pin-image-digests.sh  rotate-mt-node-token.py  tcp_test.py  validate_processor_contract.py  zmq_test.py
src/: check_db.py  diagnostic_harness.py  g.py
src/edge-ingress/: Cargo.toml  Makefile
src/edge-ingress/config/: edge-ingress.yaml
src/edge-ingress/config/local/: edge-ingress-local.yaml
src/edge-ingress/config/production/: edge-ingress-production.yaml
src/edge-ingress/config/staging/: edge-ingress-staging.yaml
src/edge-ingress/crates/common/: Cargo.toml
src/edge-ingress/crates/common/src/: constants.rs  error.rs  lib.rs  logging.rs  metrics.rs  trace.rs  types.rs
src/edge-ingress/crates/common/src/utils/: mod.rs  validation.rs
src/edge-ingress/crates/connection-limiter/: Cargo.toml
src/edge-ingress/crates/connection-limiter/src/: global.rs  lib.rs  limiter.rs  per_ip.rs
src/edge-ingress/crates/edge-server/: Cargo.toml
src/edge-ingress/crates/edge-server/src/: config_loader.rs  handler.rs  lib.rs  main.rs  metrics_server.rs  server.rs
src/edge-ingress/crates/geo-router/: Cargo.toml
src/edge-ingress/crates/geo-router/src/: fallback.rs  geoip.rs  lib.rs  region.rs  router.rs
src/edge-ingress/crates/tls/: Cargo.toml
src/edge-ingress/crates/tls/src/: acceptor.rs  cert_loader.rs  config.rs  handshake.rs  lib.rs  sni.rs
src/edge-ingress/crates/upstream/: Cargo.toml
src/edge-ingress/crates/upstream/src/: health.rs  lib.rs  pool.rs  proxy.rs  retry.rs
src/edge-ingress/scripts/: build.sh  download-geoip.sh  verify.sh
src/envoy/: Cargo.toml  Makefile  rust-toolchain.toml
src/envoy/config/: envoy.yaml
src/envoy/config/local/: envoy-local.yaml
src/envoy/config/production/: envoy-production.yaml
src/envoy/config/staging/: envoy-staging.yaml
src/envoy/crates/common/: Cargo.toml
src/envoy/crates/common/src/: constants.rs  error.rs  lib.rs  logging.rs  metrics.rs  response.rs  trace.rs  types.rs
src/envoy/crates/common/src/utils/: encoding.rs  mod.rs  validation.rs
src/envoy/crates/header-validator/: Cargo.toml
src/envoy/crates/header-validator/src/: content_type.rs  lib.rs  rules.rs  sanitizer.rs  validator.rs
src/envoy/crates/integration-filter/: Cargo.toml
src/envoy/crates/integration-filter/src/: circuit_breaker.rs  context.rs  lib.rs  orchestrator.rs
src/envoy/crates/integration-filter/src/filters/: header.rs  mod.rs  rate_limit.rs  request.rs
src/envoy/crates/rate-limiter/: Cargo.toml
src/envoy/crates/rate-limiter/src/: bucket.rs  config.rs  lib.rs  limiter.rs  storage.rs
src/envoy/crates/request-validator/: Cargo.toml
src/envoy/crates/request-validator/src/: lib.rs  method.rs  size.rs  structure.rs
src/envoy/scripts/: build.sh  generate-configmap.sh  verify.sh
tests/: conftest.py  factories.py
(+2647 files in other folders)
