[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etradie-engine"
version = "1.0.0"
description = "AI-Powered Trading System — Market Intelligence Engine"
requires-python = ">=3.11"
license = {text = "Proprietary"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "ERA",    # flake8-eradicate
    "PL",     # pylint
    "ASYNC",  # flake8-async
]
ignore = [
    "S101",   # allow assert in tests
    "PLR0913", # too many arguments (needed for DI)
    "N818", "SIM105", "S110", "F841", "S311", "F401", "SIM108", "S603", "N806", "E402", "ERA001", "B905", "S323", "S310", "PTH123", "ASYNC109", "B904", "PLR2004", "PLR0912", "PLR0915", "E741", "S105", "S112", "S108", "SIM102", "E722", "DTZ005", "SIM103", "PLR0911", "PLW0603", "B007", "F821", "PLR0124", "B008", "E501", "S608", "S104", "PLW0602", "W291", "PLR1714", "N817", "C416", "N811", "PLW2901", "N814", "S324", "F402", "PLC0206", "DTZ007", "DTZ011", "S106", "N816", "UP038", "ASYNC210"
]

[tool.ruff.lint.isort]
known-first-party = ["engine"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "PLR2004", "PLC0415", "E501", "DTZ001", "S105", "N818", "SIM105", "S110", "F841", "S311", "F401", "SIM108", "S603", "N806", "E402", "ERA001", "B905", "S323", "S310", "PTH123", "ASYNC109", "B904"]
"src/engine/processor/prompts/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
explicit_package_bases = true
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
disable_error_code = [
    "prop-decorator",
    "import-not-found",
    "arg-type",
    "no-untyped-def",
    "attr-defined",
    "assignment",
    "no-any-return",
    "type-arg",
    "union-attr",
    "var-annotated",
    "misc",
    "name-defined",
    "return-value",
    "dict-item",
    "list-item",
    "no-untyped-call",
    "unused-ignore",
    "abstract",
    "call-arg"
]


[[tool.mypy.overrides]]
module = ["feedparser.*", "apscheduler.*", "kubernetes_asyncio.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "--tb=short",
    "--cov=engine",
    "--cov-report=term-missing",
    "--cov-fail-under=0",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require DB/Redis)",
    "slow: Tests that take >5s to run",
    "chaos: Chaos / resilience tests (require a staging cluster or container runtime)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:feedparser.*",
    "ignore::DeprecationWarning:asyncio.*",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["engine"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
