[workspace]
members = [
    "crates/common",
    "crates/rate-limiter",
    "crates/header-validator",
    "crates/request-validator",
    "crates/integration-filter",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Exoper Team"]
license = "MIT"
repository = "https://github.com/etradie/etradie"

[workspace.dependencies]
proxy-wasm = "0.2.2"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
log = "0.4"
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true
