[package]
name = "edge-ingress-connection-limiter"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
edge-ingress-common = { path = "../common" }
tokio = { version = "1.35", features = ["sync", "time"] }
dashmap = "6.2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
