[package]
name = "edge-ingress-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "edge-ingress"
path = "src/main.rs"

[dependencies]
edge-ingress-common = { path = "../common" }
edge-ingress-tls = { path = "../tls" }
edge-ingress-geo-router = { path = "../geo-router" }
edge-ingress-connection-limiter = { path = "../connection-limiter" }
edge-ingress-upstream = { path = "../upstream" }

tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = { version = "0.32", features = ["tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[dev-dependencies]
tempfile = "3.8"
