[package]
name = "edge-ingress-geo-router"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
edge-ingress-common = { path = "../common" }
maxminddb = "0.27"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["sync"] }

[dev-dependencies]
tempfile = "3.8"
