[package]
name = "edge-ingress-tls"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
edge-ingress-common = { path = "../common" }
tokio = { version = "1.35", features = ["full"] }
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"
webpki-roots = "0.26"
x509-parser = "0.16"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
