[package]
name = "edge-ingress-tls"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
edge-ingress-common = { path = "../common" }
tokio = { version = "1.35", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "1.0"
x509-parser = "0.16"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
rustls-pemfile = "2.1.2"

[dev-dependencies]
tempfile = "3.8"
