[package]
name = "edge-ingress-upstream"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
edge-ingress-common = { path = "../common" }
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1", "http2"] }
http-body-util = "0.1"
tracing = "0.1"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
