[package]
name = "etradie-envoy-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["eTradie Team"]
description = "Common library for eTradie Envoy WASM filters - core types, errors, and utilities"
license = "MIT"
repository = "https://github.com/etradie/etradie"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proxy-wasm = "0.2.2"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
log = "0.4"
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
