[package]
name = "etradie-envoy-rate-limiter"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["eTradie Team"]
description = "Rate limiting filter for eTradie Envoy - global and IP-based rate limiting with token bucket algorithm"
license = "MIT"
repository = "https://github.com/etradie/etradie"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
etradie-envoy-common = { path = "../common" }
proxy-wasm = "0.2.2"
serde = { version = "1.0", features = ["derive"], default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
