[package]
name = "etradie-envoy-request-validator"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Exoper Team"]
description = "Request validation filter for Exoper Envoy - validates HTTP methods, body size, and request structure"
license = "MIT"
repository = "https://github.com/etradie/etradie"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
etradie-envoy-common = { path = "../common" }
proxy-wasm = "0.2.2"
serde = { version = "1.0", features = ["derive"], default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
